--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm test --experimental-module
       env:
         CI: true
         TWITCH_USERNAME: ${{ secrets.TWITCH_USERNAME }}
